# qhy600

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
cli/: main.cpp
gui/: application.cpp  application.hpp  main.cpp
include/: camera.hpp  qhy.hpp
perf/: perf_qhy.cpp
src/: camera.cpp  qhy.cpp
subprojects/: implot.wrap
subprojects/packagefiles/implot-0.14/: meson.build
test/: test_qhy.cpp
